Change name of requirements.txt due to streamlit errors when importing dependencies.

--- a/final_version/project/docker/Dockerfile
+++ b/final_version/project/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.8
 WORKDIR /app
-COPY requirements_project.txt ./requirements_project.txt
-RUN pip3 install -r requirements_project.txt
+COPY requirements.txt ./requirements.txt
+RUN pip3 install -r requirements.txt
 EXPOSE 8501
 COPY . /app
 ENTRYPOINT [ "streamlit", "run" ]
