Change all (delete fbprophet)

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,7 @@ pandas
 numpy
 scikit-learn
 yfinance==0.1.74
-pystan==2.19.1.1
 streamlit==1.10.0
-plotly
+plotly==5.10.0
+altair==4.2.0
 pandas_datareader
-fbprophet==0.7.1
